--- a/index.html
+++ b/index.html
@@ -73,28 +73,28 @@
         <section>
             <div class="lg:my-8">
                 <div class="carousel w-full">
-                    <div id="slide1" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(../images/1.png)] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center rounded-lg">
+                    <div id="slide1" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/1.png)] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center rounded-lg">
                         <!--  -->
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                             <a href="#slide4" class="btn btn-circle">❮</a>
                             <a href="#slide2" class="btn btn-circle">❯</a>
                         </div>
                     </div>
-                    <div id="slide2" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(../images/1.png)] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center">
+                    <div id="slide2" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/1.png)] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center">
                         <!--  -->
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                             <a href="#slide1" class="btn btn-circle">❮</a>
                             <a href="#slide3" class="btn btn-circle">❯</a>
                         </div>
                     </div>
-                    <div id="slide3" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(../images/1.png)] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center">
+                    <div id="slide3" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/1.png)] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center">
                         <!--  -->
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                             <a href="#slide2" class="btn btn-circle">❮</a>
                             <a href="#slide4" class="btn btn-circle">❯</a>
                         </div>
                     </div>
-                    <div id="slide4" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(../images/1.png)] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center">
+                    <div id="slide4" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/1.png)] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center">
                         <!--  -->
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                             <a href="#slide3" class="btn btn-circle">❮</a>
@@ -213,8 +213,211 @@
                     <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Dit Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
                 </div>
                 <div class="divider pb-7 pt-3"></div>
-                <div class="grid grid-cols-1 gap-6 lg:grid-cols-4 lg:px-6">
-
+                <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
+                    <div class="border-2 rounded-lg lg:flex space-y-2 space-x-3 p-3">
+                        <div>
+                            <img class="w-full" src="Images/5.png" alt="">
+                        </div>
+                        <div class="space-y-4">
+                            <div class="flex gap-6">
+                                <div class="flex items-center gap-2">
+                                    <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <p>5.0</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-eye"></i>
+                                    <p>20</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-regular fa-heart"></i>
+                                    <p>200</p>
+                                </div>
+                            </div>
+                            <div class="space-y-1">
+                                <h2 class="text-xl font-extrabold">World Cup Flags Football</h2>
+                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            </div>
+                            <div class="lg:flex gap-5 space-y-1 items-center">
+                                <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-cart-shopping"></i>
+                                    <p>Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border-2 rounded-lg lg:flex space-y-2 space-x-3 p-3">
+                        <div>
+                            <img class="w-full" src="Images/6.png" alt="">
+                        </div>
+                        <div class="space-y-4">
+                            <div class="flex gap-6">
+                                <div class="flex items-center gap-2">
+                                    <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <p>5.0</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-eye"></i>
+                                    <p>20</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-regular fa-heart"></i>
+                                    <p>200</p>
+                                </div>
+                            </div>
+                            <div class="space-y-1">
+                                <h2 class="text-xl font-extrabold">World Cup Flags Football</h2>
+                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            </div>
+                            <div class="lg:flex gap-5 space-y-1 items-center">
+                                <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-cart-shopping"></i>
+                                    <p>Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border-2 rounded-lg lg:flex space-y-2 space-x-3 p-3">
+                        <div>
+                            <img class="w-full" src="Images/7.png" alt="">
+                        </div>
+                        <div class="space-y-4">
+                            <div class="flex gap-6">
+                                <div class="flex items-center gap-2">
+                                    <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <p>5.0</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-eye"></i>
+                                    <p>20</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-regular fa-heart"></i>
+                                    <p>200</p>
+                                </div>
+                            </div>
+                            <div class="space-y-1">
+                                <h2 class="text-xl font-extrabold">Cap For Hockeys</h2>
+                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            </div>
+                            <div class="lg:flex gap-5 space-y-1 items-center">
+                                <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-cart-shopping"></i>
+                                    <p>Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border-2 rounded-lg lg:flex space-y-2 space-x-3 p-3">
+                        <div>
+                            <img class="w-full" src="Images/8.png" alt="">
+                        </div>
+                        <div class="space-y-4">
+                            <div class="flex gap-6">
+                                <div class="flex items-center gap-2">
+                                    <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <p>5.0</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-eye"></i>
+                                    <p>20</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-regular fa-heart"></i>
+                                    <p>200</p>
+                                </div>
+                            </div>
+                            <div class="space-y-1">
+                                <h2 class="text-xl font-extrabold">World Cup Flags Football</h2>
+                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            </div>
+                            <div class="lg:flex gap-5 space-y-1 items-center">
+                                <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-cart-shopping"></i>
+                                    <p>Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border-2 rounded-lg lg:flex space-y-2 space-x-3 p-3">
+                        <div>
+                            <img class="w-full" src="Images/9.png" alt="">
+                        </div>
+                        <div class="space-y-4">
+                            <div class="flex gap-6">
+                                <div class="flex items-center gap-2">
+                                    <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <p>5.0</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-eye"></i>
+                                    <p>20</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-regular fa-heart"></i>
+                                    <p>200</p>
+                                </div>
+                            </div>
+                            <div class="space-y-1">
+                                <h2 class="text-xl font-extrabold">World Cup Flags Football</h2>
+                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            </div>
+                            <div class="lg:flex gap-5 space-y-1 items-center">
+                                <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-cart-shopping"></i>
+                                    <p>Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border-2 rounded-lg lg:flex space-y-2 space-x-3 p-3">
+                        <div>
+                            <img class="w-full" src="Images/10.png" alt="">
+                        </div>
+                        <div class="space-y-4">
+                            <div class="flex gap-6">
+                                <div class="flex items-center gap-2">
+                                    <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <p>5.0</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-eye"></i>
+                                    <p>20</p>
+                                </div>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-regular fa-heart"></i>
+                                    <p>200</p>
+                                </div>
+                            </div>
+                            <div class="space-y-1">
+                                <h2 class="text-xl font-extrabold">World Cup Flags Football</h2>
+                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            </div>
+                            <div class="lg:flex gap-5 space-y-1 items-center">
+                                <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
+                                <div class="flex items-center gap-2">
+                                    <i class="fa-solid fa-cart-shopping"></i>
+                                    <p>Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
