--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
                 </div>
                 <div class="divider pb-7 pt-3"></div>
                 <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
-                    <div class="h-[40vh] bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url(../images/2.png)] bg-cover rounded-lg flex items-center">
+                    <div class="h-[40vh] bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url(images/2.png)] bg-cover rounded-lg flex items-center">
                         <div class="text-white px-6 space-y-3">
                             <h1 class="text-2xl font-extrabold">Junior Program</h1>
                             <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
                             <button class="p-3 bg-red-600 rounded-lg">Register Now!</button>
                         </div>
                     </div>
-                    <div class="h-[40vh] bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url(../images/3.png)] bg-cover rounded-lg flex items-center">
+                    <div class="h-[40vh] bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url(images/3.png)] bg-cover rounded-lg flex items-center">
                         <div class="text-white px-6 space-y-3">
                             <h1 class="text-2xl font-extrabold">Teenager Program</h1>
                             <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
@@ -194,7 +194,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="h-[40vh] lg:h-[60vh] mt-6 bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url(../images/4.png)] bg-cover rounded-lg flex items-center">
+                <div class="h-[40vh] lg:h-[60vh] mt-6 bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url(images/4.png)] bg-cover rounded-lg flex items-center">
                     <div class="text-white px-6 space-y-3">
                         <h1 class="text-2xl font-extrabold">Professional Program</h1>
                         <p class="lg:w-[45%]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
@@ -415,6 +415,80 @@
                                     <i class="fa-solid fa-cart-shopping"></i>
                                     <p>Delivery Fee : Free</p>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Question section -->
+        <section class="my-20">
+            <div class="divider pb-2"></div>
+            <div>
+                <div>
+                    <h1 class="text-4xl font-bold text-center">Clients Question</h1>
+                    <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                </div>
+                <div class="divider pb-7 pt-3"></div>
+                <!--  -->
+                <div class="lg:flex border-2 p-4 rounded-lg gap-6">
+                    <div>
+                        <img src="images/11.png" alt="">
+                    </div>
+                    <div class="join join-vertical">
+                        <div class="collapse collapse-arrow join-item">
+                            <input type="radio" name="my-accordion-4" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">
+                                Our Equipment
+                            </div>
+                            <div class="collapse-content">
+                                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow join-item">
+                            <input type="radio" name="my-accordion-4" />
+                            <div class="collapse-title text-xl font-medium">
+                                Hockey Training
+                            </div>
+                            <div class="collapse-content">
+                                <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow join-item">
+                            <input type="radio" name="my-accordion-4" />
+                            <div class="collapse-title text-xl font-medium">
+                                Private Lessons
+                            </div>
+                            <div class="collapse-content">
+                                <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow join-item">
+                            <input type="radio" name="my-accordion-4" />
+                            <div class="collapse-title text-xl font-medium">
+                                Ski Touring
+                            </div>
+                            <div class="collapse-content">
+                                <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow join-item">
+                            <input type="radio" name="my-accordion-4" />
+                            <div class="collapse-title text-xl font-medium">
+                                Booking
+                            </div>
+                            <div class="collapse-content">
+                                <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow join-item">
+                            <input type="radio" name="my-accordion-4" />
+                            <div class="collapse-title text-xl font-medium">
+                                Click to open this one and close others
+                            </div>
+                            <div class="collapse-content">
+                                <p>Pricings</p>
                             </div>
                         </div>
                     </div>
