--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
                 </div>
                 <div class="divider pb-7 pt-3"></div>
                 <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
-                    <div class="h-[40vh] bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url(images/2.png)] bg-cover rounded-lg flex items-center">
+                    <div class="h-[40vh] bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url('Images/2.png')] bg-cover rounded-lg flex items-center">
                         <div class="text-white px-6 space-y-3">
                             <h1 class="text-2xl font-extrabold">Junior Program</h1>
                             <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
                             <button class="p-3 bg-red-600 rounded-lg">Register Now!</button>
                         </div>
                     </div>
-                    <div class="h-[40vh] bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url(images/3.png)] bg-cover rounded-lg flex items-center">
+                    <div class="h-[40vh] bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url('Images/3.png')] bg-cover rounded-lg flex items-center">
                         <div class="text-white px-6 space-y-3">
                             <h1 class="text-2xl font-extrabold">Teenager Program</h1>
                             <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
@@ -194,7 +194,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="h-[40vh] lg:h-[60vh] mt-6 bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url(images/4.png)] bg-cover rounded-lg flex items-center">
+                <div class="h-[40vh] lg:h-[60vh] mt-6 bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url('Images/4.png')] bg-cover rounded-lg flex items-center">
                     <div class="text-white px-6 space-y-3">
                         <h1 class="text-2xl font-extrabold">Professional Program</h1>
                         <p class="lg:w-[45%]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
@@ -434,7 +434,7 @@
                 <!--  -->
                 <div class="lg:flex border-2 p-4 rounded-lg gap-6">
                     <div>
-                        <img src="images/11.png" alt="">
+                        <img src="Images/11.png" alt="">
                     </div>
                     <div class="join join-vertical">
                         <div class="collapse collapse-arrow join-item">
