--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div>
                 <div class="navbar">
                     <div class="navbar-start">
-                        <h6 class="text-xl lg:text-4xl font-bold">Hockey’s</h6>
+                        <h6 class="text-xl lg:text-4xl font-bold">Hockey<span class="text-red-500">’</span>s</h6>
                     </div>
 
                     <div class="navbar-center flex">
@@ -76,29 +76,29 @@
                     <div id="slide1" class="carousel-item relative w-full bg-[url('Images/1.png')] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center rounded-lg">
                         <!--  -->
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                            <a href="#slide4" class="btn btn-circle">❮</a>
-                            <a href="#slide2" class="btn btn-circle">❯</a>
+                            <a href="#slide4" class="btn btn-circle bg-black"><i class="fa-solid text-white fa-angle-left"></i></a>
+                            <a href="#slide2" class="btn btn-circle bg-black"><i class="fa-solid text-white fa-angle-right"></i></a>
                         </div>
                     </div>
                     <div id="slide2" class="carousel-item relative w-full bg-[url('Images/1.png')] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center">
                         <!--  -->
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                            <a href="#slide1" class="btn btn-circle">❮</a>
-                            <a href="#slide3" class="btn btn-circle">❯</a>
+                            <a href="#slide1" class="btn btn-circle bg-black"><i class="fa-solid text-white fa-angle-left"></i></a>
+                            <a href="#slide3" class="btn btn-circle bg-black"><i class="fa-solid text-white fa-angle-right"></i></a>
                         </div>
                     </div>
                     <div id="slide3" class="carousel-item relative w-full bg-[url('Images/1.png')] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center">
                         <!--  -->
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                            <a href="#slide2" class="btn btn-circle">❮</a>
-                            <a href="#slide4" class="btn btn-circle">❯</a>
+                            <a href="#slide2" class="btn btn-circle bg-black"><i class="fa-solid text-white fa-angle-left"></i></a>
+                            <a href="#slide4" class="btn btn-circle bg-black"><i class="fa-solid text-white fa-angle-right"></i></a>
                         </div>
                     </div>
                     <div id="slide4" class="carousel-item relative w-full bg-[url('Images/1.png')] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center">
                         <!--  -->
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                            <a href="#slide3" class="btn btn-circle">❮</a>
-                            <a href="#slide1" class="btn btn-circle">❯</a>
+                            <a href="#slide3" class="btn btn-circle bg-black"><i class="fa-solid text-white fa-angle-left"></i></a>
+                            <a href="#slide1" class="btn btn-circle bg-black"><i class="fa-solid text-white fa-angle-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -497,7 +497,7 @@
         </section>
 
         <!-- Contact section -->
-        <section class="my-20">
+        <section class="mt-20">
             <div class="divider pb-2"></div>
             <div>
                 <div>
@@ -560,9 +560,74 @@
                 </div>
             </div>
         </section>
+
+        <!--  social links -->
+        <section class="my-16">
+            <div class="py-8 bg-[#d1d5db] rounded-lg space-y-3">
+                <h2 class="font-extrabold text-2xl text-center">Social Media</h2>
+                <div class="flex items-center justify-center space-x-4">
+                    <i class="fa-brands text-3xl fa-facebook"></i>
+                    <i class="fa-brands text-3xl fa-github"></i>
+                    <i class="fa-brands text-3xl fa-twitter"></i>
+                    <i class="fa-brands text-3xl fa-instagram"></i>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Footer section -->
-    <footer></footer>
+    <footer class="bg-black">
+        <section class="container mx-auto lg:px-24 px-8 py-12 my-5">
+            <div class="grid grid-cols-1 lg:grid-cols-5 text-center lg:text-left gap-10">
+                <div class="col-span-2 text-white space-y-3">
+                    <h2 class="text-2xl font-extrabold">Get In Touch</h2>
+                    <p class="opacity-70">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                    <div class="flex items-center gap-2 justify-center lg:justify-start">
+                        <i class="fa-regular text-red-600 fa-envelope"></i>
+                        <p class="opacity-70">hockeys@support.com</p>
+                    </div>
+                    <div class="flex gap-2 items-center justify-center lg:justify-start">
+                        <i class="fa-solid text-red-600 fa-phone"></i>
+                        <p class="opacity-70">(+62) 123-321-543</p>
+                    </div>
+                </div>
+                <div class="col-span-3 text-white grid grid-cols-1 lg:grid-cols-3 gap-10">
+                    <div class="lg:col-span-2 grid grid-cols-2 gap-6">
+                        <div class="space-y-5">
+                            <h2 class="font-bold text-xl">Company</h2>
+                            <ul class="opacity-70 space-y-2">
+                                <li>About us</li>
+                                <li>Leadership</li>
+                                <li>Careers</li>
+                                <li>News & Article</li>
+                                <li>Legal Notice</li>
+                            </ul>
+                        </div>
+                        <div class="space-y-5">
+                            <h2 class="font-bold text-xl">Support</h2>
+                            <ul class="opacity-70 space-y-2">
+                                <li>Help center</li>
+                                <li>FAQ</li>
+                                <li>Ticket support</li>
+                                <li>contact us</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="lg:col-span-1">
+                        <div class="space-y-5">
+                            <h2 class="font-bold text-xl">Services</h2>
+                            <ul class="opacity-70 space-y-2">
+                                <li>Academy</li>
+                                <li>Group Lesson</li>
+                                <li>Private Lesson</li>
+                                <li>Hockeys for kids</li>
+                                <li>Hockeys for Adult</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
