more navber flexible commit

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <!-- Navber Section -->
         <section>
             <div>
-                <div class="navbar">
-                    <div class="navbar-start">
+                <div class="flex justify-between items-center">
+                    <div class="order-2 lg:order-1">
                         <h6 class="text-xl lg:text-4xl font-bold">Hockey<span class="text-red-500">’</span>s</h6>
                     </div>
 
-                    <div class="navbar-center flex">
+                    <div class="order-1 lg:order-2 flex">
                         <div class="dropdown">
                             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
 
-                    <div class="navbar-end">
+                    <div class="order-3">
                         <div class="lg:flex items-center justify-between lg:gap-4">
                             <i class="fa-solid hidden lg:flex fa-magnifying-glass"></i>
                             <button class="bg-[#FF4240] px-2 lg:px-4 py-2 lg:py-3 rounded-lg text-white font-bold"> Get Ticket</button>
@@ -71,7 +71,7 @@
 
         <!-- Banner section -->
         <section>
-            <div class="lg:my-8">
+            <div class="my-2 lg:my-5">
                 <div class="carousel w-full">
                     <div id="slide1" class="carousel-item relative w-full bg-[url('Images/1.png')] h-[50vh] lg:h-[80vh] bg-no-repeat bg-center bg-cover flex items-center justify-center rounded-lg">
                         <!--  -->
@@ -561,7 +561,7 @@
             </div>
         </section>
 
-        <!--  social links -->
+        <!-- Social links -->
         <section class="my-16">
             <div class="py-8 bg-[#d1d5db] rounded-lg space-y-3">
                 <h2 class="font-extrabold text-2xl text-center">Social Media</h2>
