All meaning full text commit

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="lg:absolute lg:bottom-9 lg:right-36 lg:w-[40%] mx-auto bg-black shadow-lg rounded-lg lg:flex items-center justify-end">
+                <div class="lg:absolute lg:bottom-16 lg:right-36 lg:w-[40%] mx-auto bg-black shadow-lg rounded-lg lg:flex items-center justify-end">
                     <div class="p-4 lg:p-8 space-y-2">
                         <h1 class="text-white font-bold  text-2xl">Meet all the heroes from the field</h1>
-                        <p class="text-white text-sm">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                        <p class="text-white text-sm">Join our hockey club and meet the real-life heroes on the field! Experience the passion, teamwork, and thrilling moments as our dedicated players </p>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
             <div>
                 <div>
                     <h1 class="text-4xl font-bold text-center">Professional Hockeys Club</h1>
-                    <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                    <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Step into the realm of professional hockey with our elite club. Join a community of dedicated athletes, where passion meets precision, and together, we strive for greatness on the ice. </p>
                 </div>
                 <div class="divider pb-7 pt-3"></div>
                 <div class="grid grid-cols-1 gap-6 lg:grid-cols-4 lg:px-6">
@@ -132,7 +132,7 @@
                         </div>
                         <div class="text-center space-y-3">
                             <h3 class="text-xl font-semibold">Prayer Facility</h3>
-                            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+                            <p>Experience our club's great prayer facilities for moments of peace and reflection.</p>
                         </div>
                     </div>
 
@@ -141,8 +141,8 @@
                             <div class="radial-progress text-[#49D293] z-10" style="--value:90;" role="progressbar"> <span class="font-bold">95%</span></div>
                         </div>
                         <div class="text-center space-y-3">
-                            <h3 class="text-xl font-semibold">Prayer Facility</h3>
-                            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+                            <h3 class="text-xl font-semibold">Experienced Coach</h3>
+                            <p>Tap into expert guidance with our experienced coaches. Elevate your skills and strategy</p>
                         </div>
                     </div>
 
@@ -151,8 +151,8 @@
                             <div class="radial-progress text-orange-400 z-10" style="--value:85;" role="progressbar"><span class="font-bold">90%</span></div>
                         </div>
                         <div class="text-center space-y-3">
-                            <h3 class="text-xl font-semibold">Prayer Facility</h3>
-                            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+                            <h3 class="text-xl font-semibold">Senior Player</h3>
+                            <p>Join our seasoned senior players for a winning experience. Learn from the best, </p>
                         </div>
                     </div>
 
@@ -161,8 +161,8 @@
                             <div class="radial-progress text-[#4C8DF1] z-10" style="--value:75;" role="progressbar"><span class="font-bold">80%</span></div>
                         </div>
                         <div class="text-center space-y-3">
-                            <h3 class="text-xl font-semibold">Prayer Facility</h3>
-                            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+                            <h3 class="text-xl font-semibold">Training Ground</h3>
+                            <p>If you join the club, train on our premier grounds for unparalleled skill development.</p>
                         </div>
                     </div>
                 </div>
@@ -174,22 +174,22 @@
             <div class="divider pb-2"></div>
             <div>
                 <div>
-                    <h1 class="text-4xl font-bold text-center">Professional Hockeys Club</h1>
-                    <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                    <h1 class="text-4xl font-bold text-center">Program Sections</h1>
+                    <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Explore our program zone for a quick path to success. Join, learn, and excel in a few simple steps toward your goals. </p>
                 </div>
                 <div class="divider pb-7 pt-3"></div>
                 <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
                     <div class="h-[40vh] bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url('Images/2.png')] bg-cover rounded-lg flex items-center">
                         <div class="text-white px-6 space-y-3">
                             <h1 class="text-2xl font-extrabold">Junior Program</h1>
-                            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                            <p>Jump into excitement with our junior program. Fun-filled learning for the young champs!</p>
                             <button class="p-3 bg-red-600 rounded-lg">Register Now!</button>
                         </div>
                     </div>
                     <div class="h-[40vh] bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url('Images/3.png')] bg-cover rounded-lg flex items-center">
                         <div class="text-white px-6 space-y-3">
                             <h1 class="text-2xl font-extrabold">Teenager Program</h1>
-                            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                            <p>Teenagers, gear up for action in our dynamic program. Unleash your potential with a blend of skill and thrill!.</p>
                             <button class="p-3 bg-red-600 rounded-lg">Register Now!</button>
                         </div>
                     </div>
@@ -197,7 +197,7 @@
                 <div class="h-[40vh] lg:h-[60vh] mt-6 bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.4)),url('Images/4.png')] bg-cover rounded-lg flex items-center">
                     <div class="text-white px-6 space-y-3">
                         <h1 class="text-2xl font-extrabold">Professional Program</h1>
-                        <p class="lg:w-[45%]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                        <p class="lg:w-[45%]">Embark on a journey to excellence with our professional program. Elevate your game and make your mark in the world of elite hockey.</p>
                         <button class="p-3 bg-red-600 rounded-lg">Register Now!</button>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
             <div>
                 <div>
                     <h1 class="text-4xl font-bold text-center">Our New Products</h1>
-                    <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Dit Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                    <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Check out our latest gear – from stylish jerseys to cutting-edge equipment. Elevate your game with our new products. </p>
                 </div>
                 <div class="divider pb-7 pt-3"></div>
                 <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
@@ -236,8 +236,8 @@
                                 </div>
                             </div>
                             <div class="space-y-1">
-                                <h2 class="text-xl font-extrabold">World Cup Flags Football</h2>
-                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                                <h2 class="text-xl font-extrabold">Jacket for coach</h2>
+                                <p class="text-sm">Elevate your game with our new stylish products.</p>
                             </div>
                             <div class="lg:flex gap-5 space-y-1 items-center">
                                 <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
@@ -270,8 +270,8 @@
                                 </div>
                             </div>
                             <div class="space-y-1">
-                                <h2 class="text-xl font-extrabold">World Cup Flags Football</h2>
-                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                                <h2 class="text-xl font-extrabold">Ball for player.</h2>
+                                <p class="text-sm">Elevate your game with our new stylish products. </p>
                             </div>
                             <div class="lg:flex gap-5 space-y-1 items-center">
                                 <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
@@ -305,7 +305,7 @@
                             </div>
                             <div class="space-y-1">
                                 <h2 class="text-xl font-extrabold">Cap For Hockeys</h2>
-                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                                <p class="text-sm">Elevate your game with our new stylish products. </p>
                             </div>
                             <div class="lg:flex gap-5 space-y-1 items-center">
                                 <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
@@ -338,8 +338,8 @@
                                 </div>
                             </div>
                             <div class="space-y-1">
-                                <h2 class="text-xl font-extrabold">World Cup Flags Football</h2>
-                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                                <h2 class="text-xl font-extrabold">Jersey for player</h2>
+                                <p class="text-sm">Elevate your game with our new stylish products. </p>
                             </div>
                             <div class="lg:flex gap-5 space-y-1 items-center">
                                 <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
@@ -372,8 +372,8 @@
                                 </div>
                             </div>
                             <div class="space-y-1">
-                                <h2 class="text-xl font-extrabold">World Cup Flags Football</h2>
-                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                                <h2 class="text-xl font-extrabold">Helmet for player</h2>
+                                <p class="text-sm">Elevate your game with our new stylish products. </p>
                             </div>
                             <div class="lg:flex gap-5 space-y-1 items-center">
                                 <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
@@ -406,8 +406,8 @@
                                 </div>
                             </div>
                             <div class="space-y-1">
-                                <h2 class="text-xl font-extrabold">World Cup Flags Football</h2>
-                                <p class="text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                                <h2 class="text-xl font-extrabold">Football for player</h2>
+                                <p class="text-sm">Elevate your game with our new stylish products. </p>
                             </div>
                             <div class="lg:flex gap-5 space-y-1 items-center">
                                 <h3 class="text-[#FF4240] font-extrabold">Price - $22.00</h3>
@@ -428,11 +428,11 @@
             <div>
                 <div>
                     <h1 class="text-4xl font-bold text-center">Clients Question</h1>
-                    <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                    <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Explore the answers to all your questions with our client Q&A. Clear, concise, and comprehensive – your inquiries, our expertise. </p>
                 </div>
                 <div class="divider pb-7 pt-3"></div>
                 <!--  -->
-                <div class="lg:flex border-2 p-4 rounded-lg gap-6">
+                <div class="lg:flex items-center border-2 p-4 rounded-lg gap-6">
                     <div>
                         <img src="Images/11.png" alt="">
                     </div>
@@ -443,7 +443,7 @@
                                 Our Equipment
                             </div>
                             <div class="collapse-content">
-                                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                                <p>Best equipment uses in training.</p>
                             </div>
                         </div>
                         <div class="collapse collapse-arrow join-item">
@@ -452,7 +452,7 @@
                                 Hockey Training
                             </div>
                             <div class="collapse-content">
-                                <p>hello</p>
+                                <p>Best training program in our club.</p>
                             </div>
                         </div>
                         <div class="collapse collapse-arrow join-item">
@@ -461,7 +461,7 @@
                                 Private Lessons
                             </div>
                             <div class="collapse-content">
-                                <p>hello</p>
+                                <p>This one private.</p>
                             </div>
                         </div>
                         <div class="collapse collapse-arrow join-item">
@@ -470,7 +470,7 @@
                                 Ski Touring
                             </div>
                             <div class="collapse-content">
-                                <p>hello</p>
+                                <p>secure ski touring and we probide best gaidence.</p>
                             </div>
                         </div>
                         <div class="collapse collapse-arrow join-item">
@@ -479,16 +479,16 @@
                                 Booking
                             </div>
                             <div class="collapse-content">
-                                <p>hello</p>
+                                <p>Secure your spot effortlessly by using our user-friendly booking system.</p>
                             </div>
                         </div>
                         <div class="collapse collapse-arrow join-item">
                             <input type="radio" name="my-accordion-4" />
                             <div class="collapse-title text-xl font-medium">
-                                Click to open this one and close others
+                                Pricing
                             </div>
                             <div class="collapse-content">
-                                <p>Pricings</p>
+                                <p>Eye-catching discount products and programs.</p>
                             </div>
                         </div>
                     </div>
@@ -501,8 +501,8 @@
             <div class="divider pb-2"></div>
             <div>
                 <div>
-                    <h1 class="text-4xl font-bold text-center">Professional Hockeys Club</h1>
-                    <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                    <h1 class="text-4xl font-bold text-center">Get In Touch</h1>
+                    <p class="lg:w-[55%] text-center mx-auto my-3 opacity-80">Connect with us easily! Visit our website's 'Contact' page for a quick and straightforward way to get in touch. Your inquiries matter to us!</p>
                 </div>
                 <div class="divider pb-7 pt-3"></div>
                 <div class="grid grid-cols-1 lg:grid-cols-5 gap-6">
@@ -580,7 +580,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-5 text-center lg:text-left gap-10">
                 <div class="col-span-2 text-white space-y-3">
                     <h2 class="text-2xl font-extrabold">Get In Touch</h2>
-                    <p class="opacity-70">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                    <p class="opacity-70">Connect with us easily! Visit our website's 'Contact' page for a quick and straightforward way to get in touch. Your inquiries matter to us!</p>
                     <div class="flex items-center gap-2 justify-center lg:justify-start">
                         <i class="fa-regular text-red-600 fa-envelope"></i>
                         <p class="opacity-70">hockeys@support.com</p>
